--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     compile "org.processing:core:2.2.1"
     compile "junit:junit:3.8.2"
+    compile "com.google.code.gson:gson:2.8.2"
 }
 
 group = 'me.lsdo.processing'
