--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     compile "org.processing:core:2.2.1"
     compile "junit:junit:3.8.2"
     compile "com.google.code.gson:gson:2.8.2"
-    compile "org.zeromq:jzmq:3.1.0"	
+    compile "org.zeromq:jeromq:0.4.3"
 }
 
 group = 'me.lsdo.processing'
